--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
   "homepage": "https://github.com/yusufyp/Kostoo#readme",
   "dependencies": {
     "bcrypt": "^3.0.8",
+    "ejs": "^3.0.1",
     "express": "^4.17.1",
     "express-fileupload": "^1.1.6",
     "express-session": "^1.17.0",
     "express-validator": "^6.4.0",
     "mysql": "^2.18.1",
     "path": "^0.12.7",
-    "util": "^0.12.1"
+    "util": "^0.12.1",
+    "validator": "^12.2.0"
   }
 }
