--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express-validator": "^6.4.0",
     "mysql": "^2.18.1",
     "path": "^0.12.7",
+    "randomstring": "^1.1.5",
     "util": "^0.12.1",
     "validator": "^12.2.0"
   }
